[package]
name = "bls-e2e-testvectors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { version = "0.8.0", features = ["experimental"] }
ff = "0.13.0"
group = "0.13.0"
hex = "0.4.3"
rand = "0.8"
rand_chacha = "0.3.1"
sha2 = "0.9.9"
num-bigint = "0.4.3"
